# vyvodi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
tests/: test_dense_hierarchical.py  test_glmm.py  test_vyvodi.py
vyvodi/layers/: blocks.py  dense_hierarchical.py  glmm.py
