[tool.poetry]
name = "vyvodi"
version = "0.1.0"
description = ""
authors = ["nickolasgryga <nickolasgryga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.6.0"
tensorflow-probability = "0.13.0rc0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
