[tool.poetry]
name = "vyvodi"
version = "0.1.0"
description = "custom tensorflow tools"
license = "Apache-2.0"
authors = ["nickolasgryga <nickolasgryga@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vyvodi/vyvodi"
keywords = ["tensorflow"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "~2.6.0"
tensorflow-probability = "~0.13.0rc0"
keras = "~2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
